--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -4,4 +4,10 @@ block variables
   - var template = 'about'
 
 block content
-  h1.about__title About
+  .about
+    .about_wrapper
+      section.about__gallery
+        .about__gallery__wrapper
+          each media in about.data.gallery
+            figure.about__gallery__media
+              img.about__gallery__media__image(alt=media.image.alt src=media.image.url)
